--- a/tmdb_app/pubspec.yaml
+++ b/tmdb_app/pubspec.yaml
@@ -33,10 +33,11 @@ dependencies:
   http: ^1.4.0
   carousel_slider: ^5.0.0
   sqflite: ^2.2.0+3
-
+  google_fonts: ^6.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
